--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "esm-boilerplate",
+  "name": "remix-gun-utils",
   "version": "1.0.0",
-  "description": "ESM module boilerplate",
-  "author": "Joost Jansky",
+  "description": "Utility functions and workflows for using Remix.run and GunDB. Bonus dev scripts run with google/zx",
+  "author": "Bresnow",
   "license": "MIT",
-  "workspaces": [
-    "examples/*"
-  ],
   "sideEffects": false,
   "keywords": [],
   "type": "module",
+  "private": true,
   "main": "build/main.js",
   "exports": {
     ".": "./build/main.js"
   },
+  "workspaces": [
+    "examples/remix-gun-starter"
+  ],
   "files": [
     "src"
   ],
@@ -22,26 +23,34 @@
     "test": "node test/tryout.js",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "typecheck": "tsc --noEmit",
-    "ex.build": "yarn workspace basic build",
-    "ex.dev": "yarn workspace basic dev",
-    "ex.start": "yarn workspace basic start"
+    "ex.build": "yarn workspace remix-gun-react-18 build",
+    "ex.dev": "yarn workspace remix-gun-react-18 dev",
+    "ex.start": "yarn workspace remix-gun-react-18 start"
   },
   "dependencies": {
+    "gun": "^0.2020.1237",
+    "jsesc": "^3.0.2",
+    "lz-object": "^0.1.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "redaxios": "^0.5.0",
+    "zx": "^6.2.4"
   },
   "devDependencies": {
     "@remix-run/eslint-config": "^1.3.5",
+    "@remix-run/node": "0.0.0-experimental-4e814511",
+    "@remix-run/react": "0.0.0-experimental-4e814511",
     "@types/eslint": "^8.4.1",
+    "@types/jsesc": "^3.0.1",
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.2",
     "@types/react-dom": "^18.0.0",
+    "bresnow_utility-react-hooks": "0.2.9",
     "eslint": "^8.13.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
   "engines": {
     "node": ">=14"
-  },
-  "packageManager": "yarn@3.2.0"
+  }
 }
